--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +6,44 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("./background.jpg");
+  background-size: cover;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: rgb(0 21 74) !important;
+  background-clip: border-box;
+  border: 1px solid rgb(135 162 197);
+  border-radius: .25rem;
+  color: aliceblue;
+}
+.card-header {
+  padding: .75rem 1.25rem;
+  margin-bottom: 0;
+  background-color: rgb(0 35 87 / 0%) !important;
+  border-bottom: 1px solid rgb(255 255 255 / 50%) !important;
+  color: rgb(255 255 255 / 98%) !important;
+}
+h5.card-header span {
+  text-align: right;
+  position: absolute;
+  right: 15px;
+  color: white;
+  font-size: 14px;
+  top: 17px;
+}
+svg {
+  overflow: hidden;
+  vertical-align: middle;
+  color: rgb(255 255 255);
 }
